Content box overflow fix, vw based about-selector.

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,12 @@ h1 {
     text-align: center;
 }
 
+.about-selector-header {
+    font-size: min(4vw, 32px);
+}
+
 .about-selector {
+    font-size: min(4vw, 32px);
     align-items: center;
     border: #fff;
     border-style: solid;
@@ -153,6 +158,7 @@ body {
 
 #content-container {
     /* height: 100%; */
+    overflow-y: scroll;
     width: 70vw;
     border: #fff;
     border-style: solid;
